--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "firebase": "^7.16.1",
     "node-sass": "^4.14.1",
     "react-router-dom": "^5.2.0"
   }
