--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "stripe": "6.28.0"
   },
   "devDependencies": {
+    "compression": "^1.7.4",
     "concurrently": "^4.0.1",
     "nodemon": "^1.19.1"
   }
